# libmediaengine

./: .gitignore  CMakeLists.txt  build.gradle
cmake/: FindFFMPEG.cmake
src/main/: AndroidManifest.xml
src/main/cpp/: utils.cpp
src/main/java/com/winom/multimedia/encoder/: AudioEncoder.java  Encoder.java
src/main/java/com/winom/multimedia/exceptions/: ProcessException.java  ReleaseException.java  SetupException.java
src/main/java/com/winom/multimedia/pipeline/: ProvidedStage.java  Provider.java  Stage.java  StageExecutor.java  StageTask.java
src/main/java/com/winom/multimedia/recorder/: AudioRecorder.java
src/main/java/com/winom/multimedia/source/: Frame.java
src/main/java/com/winom/multimedia/utils/: DelayRunQueue.java  FutureObject.java  JniEntry.java  MeLog.java  MediaConstants.java  MediaUtils.java
src/main/java/com/winom/multimedia/writer/: Muxer.java  WavWriter.java
src/main/res/values/: strings.xml
